--- a/index.html
+++ b/index.html
@@ -1,38 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tarun's Portfolio</title>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Hello, I'm Tarun</h1>
-    <p>Aspiring AI/ML Engineer | Sales Enthusiast | Developer</p>
+
+  <header class="hero">
+    <img src="images/profile.jpg" alt="Tarun's Photo" class="profile-pic">
+    <h1>Hi, I'm Tarun</h1>
+    <p>AI/ML Enthusiast • Data Analyst</p>
   </header>
 
   <section id="about">
     <h2>About Me</h2>
-    <p>I'm currently pursuing a Bachelor's in AIML at RNSIT. I love combining technology with business and have experience in web dev, event management, and marketing.</p>
+    <p>I’m an AIML engineering student at RNSIT with a passion for building cool tech, and an eye for business. I love blending tech + marketing!</p>
   </section>
 
   <section id="projects">
     <h2>Projects</h2>
-    <ul>
-      <li><strong>Coaching Center Website</strong> - PHP + MySQL based website with trigger usage</li>
-      <li><strong>Sales Management System</strong> - A tool to visualize and manage sales data</li>
-    </ul>
+
+    <div class="project">
+      <img src="images/project1.png" alt="Project Screenshot">
+      <div>
+        <h3>Coaching Center Website</h3>
+        <p>A PHP-MySQL website with custom triggers and login features. Built for real-world coaching center workflow!</p>
+      </div>
+    </div>
+
+    <!-- Add more projects here -->
+
   </section>
 
   <section id="contact">
     <h2>Contact</h2>
     <p>Email: tarun@example.com</p>
-    <p>LinkedIn: <a href="#">Your LinkedIn URL</a></p>
+    <p>LinkedIn: <a href="#">linkedin.com/in/yourname</a></p>
   </section>
 
   <footer>
-    <p>© 2025 Tarun. All rights reserved.</p>
+    <p>© 2025 Tarun. Made with ❤️ and HTML/CSS only :)</p>
   </footer>
+
 </body>
 </html>
